--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇭🇰 香港-2.07MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇦 加拿大-1.66MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-4.93MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇸🇬 新加坡-2.17MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇹🇭 泰国-1.46MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-278.6KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-1.27MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.46MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-470.2KB/s(Youtube:不良林), server: 5.183.176.91, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-362.4KB/s(Youtube:不良林), server: 5.183.176.84, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-631.7KB/s(Youtube:不良林), server: 5.183.176.83, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-573.9KB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-309.7KB/s(Youtube:不良林), server: 5.183.176.80, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-278.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-278.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-278.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-278.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-278.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-278.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-278.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
