--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-2.07MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇦 加拿大-1.66MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.46MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-504.0KB/s(Youtube:不良林), server: lc-hk03-direct01.lc-hk03.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk03-direct01.lc-hk03.lc-node.com}}
+  - {name: 🇨🇦 加拿大-1.33MB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 134.195.196.128, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-470.2KB/s(Youtube:不良林), server: 5.183.176.91, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-362.4KB/s(Youtube:不良林), server: 5.183.176.84, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-631.7KB/s(Youtube:不良林), server: 5.183.176.83, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-504.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-504.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-504.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
@@ -66,18 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-504.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-504.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-504.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-504.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-504.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-362.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
