--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 134.195.196.128, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-171.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇦 加拿大-1.09MB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-839.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-822.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇳 中国-987.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-598.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-342.7KB/s(Youtube:不良林), server: 5.183.176.84, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-644.1KB/s(Youtube:不良林), server: 5.183.176.94, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-470.2KB/s(Youtube:不良林), server: 5.183.176.91, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-631.7KB/s(Youtube:不良林), server: 5.183.176.83, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-573.9KB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-222.8KB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-2.37MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-171.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-644.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-171.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-644.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-171.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-644.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-171.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-644.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-171.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-644.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-171.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-644.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-171.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-342.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-644.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-573.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
